src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>IF(CONTAINS(DSM_Product_Name__c,&quot;AHF Live Developers Summit&quot;), &quot;AHF Live Developers Summit&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;AHF Live Developers Forum&quot;), &quot;AHF Live Developers Forum&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;P/A Awards&quot;), &quot;P/A Awards&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;Builder Connections&quot;), &quot;Builder Connections&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;Housing Leadership Summit&quot;), &quot;Housing Leadership Summit&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;WOC&quot;), &quot;WOC&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;Executive Conference&quot;), &quot;Executive Conference&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;Executive Leadership Summit&quot;), &quot;Executive Leadership Summit&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;ProSales 100 Conference&quot;), &quot;ProSales 100&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;Hanley Award&quot;), &quot;Hanley Award&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;ProSales Connections&quot;), &quot;ProSales Connections&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;HIVE Sponsorship&quot;), &quot;HIVE Sponsorship&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;Remodelers Summit&quot;), &quot;Remodelers Summit&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;MFE Connections&quot;), &quot;MFE Connections&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;Architect Connections&quot;),&quot;Architect Connections&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;ReNEWable Living Home&quot;),&quot;ReNEWable Living Home&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;Infrastructure Imperative&quot;),&quot;Infrastructure Imperative&quot;, 
IF(CONTAINS(DSM_Product_Name__c,&quot;HIVE Design&quot;),&quot;HIVE Design&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;HIVE Architect Workshop&quot;),&quot;HIVE Architect Workshop&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;ProjeKT 2.0 Concept Home&quot;),&quot;ProjeKT 2.0&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Light &amp; Architecture Design Awards&quot;),&quot;Light &amp; Architecture Design Awards&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Greenbuild Unity Home&quot;),&quot;Greenbuild&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Responsive Home&quot;),&quot;Responsive Home&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Custom Home Design Awards&quot;),&quot;Custom Home Design Awards&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Dealer Roundtable&quot;),&quot;Dealer Roundtable&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;NARI Local Event&quot;),&quot;NARI Local Event&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Leadership Conference&quot;),&quot;Leadership Conference&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Peak Performance Conference&quot;),&quot;Peak Performance Conference&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Remodeling Show Big 50 Lounge Sponsorship&quot;),&quot;Remodeling Show Big 50 Lounge&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Roofing Market Special Event&quot;),&quot;Roofing Market Special Event&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;ProSales Connection&quot;),&quot;ProSales Connection&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Greenbuild KB Home Projekt&quot;),&quot;Greenbuild KB Home Projekt&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;NEXTadventure Home&quot;),&quot;NEXTadventure Home&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Lighting: The Next Frontier&quot;),&quot;Lighting: The Next Frontier&quot;,
IF(CONTAINS(DSM_Product_Name__c,&quot;Infrastructure Imperative&quot;),&quot;Infrastructure Imperative&quot;,
NULL)))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Annualize_New_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(FC) Annualize New Revenue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Annualized_Amount__c</fullName>
        <formula>(TotalPrice / BLANKVALUE(FC_Deal_Length__c, 1)) * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Annualized Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Bill_Case__c</fullName>
        <label>(FC) Bill Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Billing_Instruction_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(FC) Billing Instruction Set</label>
        <referenceTo>FC_Billing_Instruction_Set__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FC_Cancellation_Revenue_Formula__c</fullName>
        <formula>IF(ISPICKVAL(FC_Purchase_Type__c , &quot;Cancellation&quot;) &amp;&amp; ISPICKVAL(Billing_Frequency__c , &quot;One-Time&quot;), FC_Original_Sale_Price__c * -1,

IF(ISPICKVAL(FC_Purchase_Type__c , &quot;Cancellation&quot;) , TotalPrice, 

IF(ISPICKVAL(FC_Purchase_Type__c , &quot;Cancellation - Reversal&quot;), TotalPrice, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Cancellation Revenue*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Cancellation_Revenue__c</fullName>
        <label>xx_(FC) Cancellation Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Consulting_Expenses__c</fullName>
        <label>(FC) Consulting Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_DBD_Percentage__c</fullName>
        <defaultValue>1</defaultValue>
        <label>(FC) DBD Percentage</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FC_DBD_Revenue__c</fullName>
        <formula>IF(FC_Pay_DBD__c &amp;&amp; !ISBLANK(FC_DBD_Percentage__c), TotalPrice * FC_DBD_Percentage__c, TotalPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) DBD Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Deal_Length__c</fullName>
        <label>(FC) Deal Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Delta_Revenue__c</fullName>
        <formula>CASE(TEXT(FC_Zuora_Action__c), 
   &quot;Remove&quot;, FC_Original_Sale_Price__c * -1, 
   &quot;Add&quot;, 0, 
   &quot;Update&quot;, FC_Sale_Price__c - FC_Original_Sale_Price__c, 
   &quot;No Action&quot;, 0 
   ,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xx_(FC) Price Increase/Decrease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Do_Not_Annualize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(FC) Do Not Annualize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Effective_Date__c</fullName>
        <label>Eff. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FC_End_Date__c</fullName>
        <label>(FC) End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FC_Geography_Type__c</fullName>
        <formula>FC_Product_Geography_Seg3__r.Product_Geography__r.ProductGeographyType__r.GeographyType__r.Name</formula>
        <label>Geo Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Geography__c</fullName>
        <formula>FC_Product_Geography_Seg3__r.Product_Geography__r.Geography__r.Name</formula>
        <label>(FC) Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Metrostudy_Product__c</fullName>
        <formula>FC_Product_Geography_Seg3__r.Product_Geography__r.ProductGeographyType__r.Product__r.Name</formula>
        <label>(FC) Metrostudy Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Monthly_Do_Not_Annualize__c</fullName>
        <formula>If( AND (FC_Do_Not_Annualize__c,  TEXT(Billing_Frequency__c) = &quot;Monthly&quot;),3,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Monthly Do Not Annualize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_New_Business_for_RD__c</fullName>
        <formula>CASE(TEXT(FC_Purchase_Type__c), &quot;Upsell&quot;, TotalPrice, &quot;New&quot;, TotalPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) New Business for RD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_New_Revenue_Formula__c</fullName>
        <formula>IF(ISPICKVAL(FC_Purchase_Type__c , &quot;New&quot;), 
    IF(FC_Annualize_New_Revenue__c, 
        FC_Annualized_Amount__c, TotalPrice), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) New Revenue*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_New_Revenue__c</fullName>
        <label>xx_(FC) New Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_One_If_One_Time_Charge__c</fullName>
        <formula>IF(TEXT(Billing_Frequency__c) == &apos;One-Time&apos;, 1, 0)</formula>
        <label>(FC) One If One-Time Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_One_If_Pay_DBD__c</fullName>
        <formula>IF(FC_Pay_DBD__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) One If Pay DBD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_One_If_Recurring_Charge__c</fullName>
        <formula>IF(!ISBLANK(TEXT(Billing_Frequency__c)) &amp;&amp; TEXT(Billing_Frequency__c) != &apos;One-Time&apos;,
            1, 0)</formula>
        <label>(FC) One If Recurring Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Opportunity_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(FC) Opportunity Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Original_Sale_Price__c</fullName>
        <label>(FC) Original Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Override_Purchase_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(FC) Override Purchase Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Pay_DBD_Revenue__c</fullName>
        <formula>IF(FC_Pay_DBD__c,
    FC_DBD_Revenue__c - ( FC_New_Revenue_Formula__c + FC_Upsell_Revenue_Formula__c + FC_Price_Increase_Decrease_Formula__c +  FC_Cancellation_Revenue_Formula__c),
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Pay DBD Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Pay_DBD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(FC) Pay DBD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Price_Increase_Decrease_Formula__c</fullName>
        <formula>IF(ISPICKVAL(FC_Purchase_Type__c , &quot;Renewal&quot;) || ISPICKVAL(FC_Purchase_Type__c , &quot;Price Change&quot;), FC_Sale_Price__c - FC_Original_Sale_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Price Increase/Decrease*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Price_Per_Period__c</fullName>
        <formula>(FC_Sale_Price__c /
    CASE(TEXT(Billing_Frequency__c),
        &quot;Semi-Annually&quot;, 2,
        &quot;Quarterly&quot;, 4,
        &quot;Monthly&quot;, 12,
        1)
)
  /
 FC_Monthly_Do_Not_Annualize__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price / Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Product_Geography_Seg3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(FC) Metrostudy Product Geography Seg3</label>
        <referenceTo>FC_Metroclient_Product_Geography_Seg3__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FC_Product_Geography__c</fullName>
        <formula>FC_Product_Geography_Seg3__r.Product_Geography__r.Name</formula>
        <label>(FC) Product Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Purchase_Type__c</fullName>
        <label>(FC) Purchase Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Renewal Upsell</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Cancellation - Reversal</fullName>
                </value>
                <value>
                    <fullName>Restructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FC_RD_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(FC) RD Assignment</label>
        <referenceTo>MetrostudySalesRegionAssignment__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FC_RD__c</fullName>
        <formula>TRIM(FC_RD_Assignment__r.User__r.FirstName &amp; &quot; &quot; &amp; FC_RD_Assignment__r.User__r.LastName)</formula>
        <label>(FC) RD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Renewal_Revenue_Formula__c</fullName>
        <formula>IF(ISPICKVAL(FC_Purchase_Type__c, &quot;Renewal&quot;) || (ISPICKVAL(FC_Purchase_Type__c, &quot;Price Change&quot;) &amp;&amp; FC_Sale_Price__c != 0 &amp;&amp; FC_Opportunity_Renewal__c),
    IF(FC_Do_Not_Annualize__c,
        CASE(TEXT(Billing_Frequency__c), 
             &quot;Monthly&quot;, FC_Sale_Price__c / 12, 
             &quot;Quarterly&quot;, FC_Sale_Price__c / 4, 
             &quot;Semi-Annually&quot;, FC_Sale_Price__c / 2,
             FC_Sale_Price__c),
        FC_Sale_Price__c),
    IF(ISPICKVAL(FC_Purchase_Type__c, &quot;Renewal Upsell&quot;),
        FC_Original_Sale_Price__c,
        0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Renewal Revenue*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Renewal_Revenue__c</fullName>
        <label>xx_(FC) Renewal Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Revenue_Type_Category__c</fullName>
        <formula>IF(TEXT(Opportunity.Purchase_Type__c) == &quot;One-time&quot;, &quot;One-Time Revenues&quot;,
        IF(TEXT( Opportunity.Purchase_Type__c ) == &quot;Membership&quot;,  &quot;Subscription Revenues&quot;, NULL))</formula>
        <label>(FC) Revenue Type Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Revenue_Type_Sub_Category__c</fullName>
        <formula>CASE(FC_Revenue_Type_Category__c, 
    &quot;Subscription Revenues&quot;, IF(TEXT(Opportunity.FC_Term_Type__c) == &quot;TERMED&quot;, &quot;Termed Revenues&quot;, &quot;Evergreen Revenues&quot;), 
    &quot;One-Time Revenues&quot;, 
        IF(TEXT(Opportunity.One_time_Sale_Type__c) == &quot;Custom Export/Report&quot;, &quot;Data Reports&quot;, 
            IF(CONTAINS(TEXT(Opportunity.One_time_Sale_Type__c), &quot;Sponsorship&quot;), &quot;Sponsorships&quot;, 
                IF(TEXT(Opportunity.One_time_Sale_Type__c) == &quot;Consulting/Engagement&quot;, &quot;Consulting&quot;, NULL))), NULL)</formula>
        <label>(FC) Revenue Type Sub-Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Revenue_Type__c</fullName>
        <formula>TRIM(FC_Revenue_Type_Category__c &amp; IF(!ISBLANK(FC_Revenue_Type_Category__c) &amp;&amp; !ISBLANK(FC_Revenue_Type_Sub_Category__c), &quot;: &quot;, &quot;&quot;) &amp; FC_Revenue_Type_Sub_Category__c)</formula>
        <label>(FC) Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Sale_Price__c</fullName>
        <label>Annualized Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Seg2_Name__c</fullName>
        <formula>FC_Product_Geography_Seg3__r.Product_Geography__r.Geography__r.Seg2_Name__c</formula>
        <label>(FC) Seg2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Seg2__c</fullName>
        <formula>FC_Product_Geography_Seg3__r.Product_Geography__r.Geography__r.Seg2__c</formula>
        <label>(FC) Seg2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Seg3_Text__c</fullName>
        <label>(FC) Seg3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Seg3__c</fullName>
        <formula>TEXT(FC_Product_Geography_Seg3__r.Seg3__c)</formula>
        <label>Seg3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Term_Type__c</fullName>
        <formula>IF(ISBLANK(Opportunity.ContractId), TEXT(Opportunity.FC_Term_Type__c),
            TEXT(Opportunity.Contract.FC_Subscription__r.Zuora__TermSettingType__c))</formula>
        <label>Term Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_UUID__c</fullName>
        <externalId>true</externalId>
        <label>(FC) UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FC_Upsell_Revenue_Formula__c</fullName>
        <formula>CASE(TEXT(FC_Purchase_Type__c), 
    &quot;Upsell&quot;, TotalPrice, 
    &quot;Renewal Upsell&quot;, FC_Sale_Price__c - FC_Original_Sale_Price__c, 
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Upsell Revenue*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Upsell_Revenue__c</fullName>
        <formula>IF(TEXT(FC_Purchase_Type__c) == &quot;Upsell&quot;, TotalPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xx_(FC) Upsell Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Zuora_Action__c</fullName>
        <label>(FC) Zuora Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <formula>PricebookEntry.Product2.FIPS_Code__c</formula>
        <label>FIPS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_CODE_2__c</fullName>
        <label>GL CODE 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_CODE_3__c</fullName>
        <label>GL CODE 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_CODE__c</fullName>
        <description>3-26-19, Lawton Added a check and local override to allow AB to set the GL Code on the line. Kept the product lookup for historical purposes. Per Sarah W.</description>
        <formula>IF(G_L_Code__c = &quot;&quot;, PricebookEntry.Product2.G_L_Code__c , G_L_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code_2_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GL Code 2 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GL_Code_2_Revenue__c</fullName>
        <formula>TotalPrice *  GL_Code_2_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Code 2 Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Code_3_Percent__c</fullName>
        <formula>IF(GL_Code_Percent__c &gt; 0,
1 -  GL_Code_Percent__c -  GL_Code_2_Percent__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Code 3 Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GL_Code_3_Revenue__c</fullName>
        <formula>TotalPrice -  GL_Code_Revenue__c - GL_Code_2_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Code 3 Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Code_Percent__c</fullName>
        <defaultValue>1</defaultValue>
        <label>GL Code Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GL_Code_Revenue__c</fullName>
        <formula>IF( 
GL_Code_Percent__c &gt; 0,
TotalPrice * GL_Code_Percent__c,
TotalPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Code Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GMT_Start__c</fullName>
        <formula>TEXT(HW_Line_Item_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMT Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G_L_Code__c</fullName>
        <label>G/L Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_DC_DSM_Product_ID__c</fullName>
        <label>HW DC DSM Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_DFP_Comments__c</fullName>
        <label>HW DFP Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW_DSM_Product_Name_Mirror__c</fullName>
        <formula>DSM_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HW DSM Product Name Mirror</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_Line_Item_End_Date__c</fullName>
        <label>HW Line Item End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HW_Line_Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>HW Line Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_Line_Item_Start_Date__c</fullName>
        <label>HW Line Item Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integration_Admin_Error_Msg__c</fullName>
        <label>Integration Admin Error Msg</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Admin_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Admin Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Admin_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Admin Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sync_to_WF__c</fullName>
        <label>Last Sync to WF</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_DSM_ID_Line_Item__c</fullName>
        <label>Legacy DSM ID (Line Item)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_End_Date__c</fullName>
        <label>Line Item End Date for I/O</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Start_Date_Only__c</fullName>
        <formula>HW_Line_Item_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Start - Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Item_Start_Date__c</fullName>
        <label>Line Item Start Date for I/O</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_MortgagePro_Product_Sold__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MS - MortgagePro Product Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_New_Revenue__c</fullName>
        <formula>OR(
FC_New_Revenue_Formula__c  &lt;&gt; 0,
AND(
FC_New_Revenue_Formula__c  = 0,
FC_Pay_DBD__c = TRUE
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS New Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_Segment__c</fullName>
        <label>MS Seg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_County__c</fullName>
        <formula>PricebookEntry.Product2.Market_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market/County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Category_Classification__c</fullName>
        <formula>case( Product_Type__c ,&apos;Consumer Specials&apos;,&apos;Branding&apos;, 
&apos;CPM&apos;,&apos;Branding&apos;, 
&apos;Demand Generation&apos;,&apos;Lead Generation&apos;,
&apos;Digital Edition&apos;,&apos;Branding&apos;,
&apos;Direct Mail List&apos;,&apos;Branding&apos;,
&apos;Directory Listing&apos;,&apos;Branding&apos;,
&apos;Directory Listing&apos;,&apos;Branding&apos;,
&apos;Education&apos;,&apos;Branding&apos;,
&apos;Email List Blast&apos;,&apos;Branding&apos;,
&apos;Newsletter&apos;,&apos;Branding&apos;,
&apos;Print&apos;,&apos;Branding&apos;,
&apos;Product Spotlight Blast&apos;,&apos;Branding&apos;, 
&apos;Roadblock&apos;,&apos;Branding&apos;, 
&apos;Run of Network&apos;,&apos;Branding&apos;, 
&apos;Strategic Marketing Services&apos;,&apos;SMS&apos;, 
&apos;Virtual Event&apos;,&apos;Lead Generation&apos;, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Category Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetroStudy_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MetroStudy Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Link__c</fullName>
        <formula>IF(!ISBLANK(Meyers_Id__c), HYPERLINK(&quot;https://na56.salesforce.com/&quot; + Meyers_Id__c, &quot;Meyers Link&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meyers Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Subscription_Fee__c</fullName>
        <formula>UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Subscription Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Cost_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Net Cost Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Cost_Field_Update__c</fullName>
        <label>Net Cost Field Update</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Cost__c</fullName>
        <formula>Units_Purchased__c * AB2__ABGrossCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Revenue_Factor__c</fullName>
        <formula>/* IF( Net_Revenue__c &gt;0, Net_Revenue__c /TotalPrice,1) */

/* Updated formula to handle negative Net Rev */
IF 
( 
Net_Revenue__c &gt;0, Net_Revenue__c /TotalPrice, 
IF 
( 
Net_Revenue__c=0,0, 
(TotalPrice - IF( Actual_Expense_Less_Labor__c &gt;0, Actual_Expense_Less_Labor__c, Planned_Expense_Less_Labor__c ))/TotalPrice 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue Factor</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Revenue__c</fullName>
        <formula>TotalPrice - IF( Actual_Expense_Less_Labor__c &gt;0, Actual_Expense_Less_Labor__c, Planned_Expense_Less_Labor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type_ID__c</fullName>
        <formula>Opportunity.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <formula>Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, PricebookEntry.Product2.Name)</formula>
        <label>Opportunity Product Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opty_Product_ID__c</fullName>
        <formula>LEFT(PricebookEntry.Product2.Product_ID__c,99)</formula>
        <label>Opty Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_DBD_Changed_By__c</fullName>
        <label>Pay DBD Changed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_DBD_Changed_On__c</fullName>
        <label>Pay DBD Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pay_DBD_Greater_Than_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay DBD Greater Than Amount</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>